Ported to 1.18. Mixin config has a breaking bug, so mixins are disabled for now. Custom anvils are deleted on their first break and anvil recipes that have an xp cost of 0 don't allow you to take the result item. Tin ore generation increased to keep in line with new copper generation. Converted AdvancedFurnaceBlockEntity to use AbstractFurnaceBlockEntity's dataAccess field instead of an accessor mixin for getting data values for the vanilla furnace code, and added an AT entry for ItemCombinerMenu's access field for use in the AnvilRepairEvent handler. Also fixed a bug in CementationConstants.CUSTOM_OUTPUT_SLOTS which had two entries for the single result slot and a bug in AdvancedFurnaceBlockEntity.advancedServerTick which consumed an incorrect amount of fuel per smelt.